variables.RunFour.scala.error
Erreur de compilation :
RunFour:2: error: not found: value bisuit
while (biscuit !=4) {avance(); if (estSurBiscuit) {bisuit+=1;};}
                                                   ^