variables.RunFour.scala.code
var biscuit = 0
while (biscuit !=4) {avance(); if (estSurBiscuit) {bisuit+=1;};}
